	Details: https://github.com/NagyD/SDLPoP/pull/303
FIXED: Fix compilation error for MSVC on Windows.
	Details: https://github.com/NagyD/SDLPoP/pull/305
DONE: If we can't save or load game, display on the console the error received from fopen(), and the name of the file which we can't open.
FIXED: Added a configurable fix for the turn-run bug that causes trick 1 and trick 2 to work.
	Details: See FIX_TURN_RUN_NEAR_WALL in config.h and https://github.com/NagyD/SDLPoP/pull/312
FIXED: Documented the controls for sword fight.
	Details: https://github.com/NagyD/SDLPoP/issues/314
FIXED: Fixed crash due to implicit declaration of strdup().
	Details:
	https://github.com/NagyD/SDLPoP/issues/313
	https://github.com/NagyD/SDLPoP/issues/315
	https://github.com/NagyD/SDLPoP/pull/316
FIXED: Fixed RGB<->BGR mismatch on big endian architectures.
	Details: https://github.com/NagyD/SDLPoP/pull/320
DONE: Added a modding option to skip the mouse in the ending scene.
	This is used in Christmas of Persia.
	Details: https://forum.princed.org/viewtopic.php?p=34897#p34897
FIXED: Fixed the font glitch on big-endian platforms. (e.g. Wii)
	Details: https://github.com/NagyD/SDLPoP/pull/321
DONE: Read controller DB file when a controller is added.
	Details: https://github.com/NagyD/SDLPoP/pull/321
FIXED: Avoid misaligned memory access on platforms where it causes a crash. (e.g. PSP)
	Details: https://github.com/NagyD/SDLPoP/pull/319

(no release date yet)
=================
(upcoming version 1.24)

DONE: You can redefine keyboard controls in the pause menu. (They are not saved on quit yet.)
FIXED: In the list of high scores, show 0:00 if the time has expired.
	Details: https://github.com/NagyD/SDLPoP/issues/340
FIXED: Added a configurable fix for: Feather fall should not affect guards, because only the prince can drink the feather fall potion.
	Details: See FIX_FEATHER_FALL_AFFECTS_GUARDS in config.h and https://github.com/NagyD/SDLPoP/issues/337