@@ -273,6 +273,9 @@ fix_turn_running_near_wall = true
 ; Feather fall should not affect guards, because only the prince can drink the feather fall potion.
 fix_feather_fall_affects_guards = true
 
+; If the prince has only one hit point when he defeats Jaffar, it stops blinking.
+fix_one_hp_stops_blinking = true
+
 
 [CustomGameplay]
 ; Turn on customization options.
