@@ -1248,6 +1248,7 @@ typedef struct fixes_options_type {
 	byte fix_register_quick_input;
 	byte fix_turn_running_near_wall;
 	byte fix_feather_fall_affects_guards;
+	byte fix_one_hp_stops_blinking;
 } fixes_options_type;
 
 #define NUM_GUARD_SKILLS 12
